--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.0.1",
+    "recharts": "^1.7.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.4"
   },
